Reg/Auth.Added basic registration/authorization functionality

--- a/Collectors/appsettings.json
+++ b/Collectors/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Collectors-E4797915-C7A2-4BB0-A2A7-D5E7AFDF807F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:collectorsdbserver.database.windows.net,1433;Initial Catalog=Collectors_db;Persist Security Info=False;User ID=android755;Password=Le62s_FLT;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
