--- a/Collectors/appsettings.json
+++ b/Collectors/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:collectorsdbserver.database.windows.net,1433;Initial Catalog=Collectors_db;Persist Security Info=False;User ID=android755;Password=Le62s_FLT;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "Authentication": {
+    "Facebook": {
+      "AppId": "442620793538732",
+      "AppSecret": "d45ecac2afad36ebbafc4ca705b3f36e"
+    },
+    "Twitter": {
+      "AppId": "yxKtHcAmxgLARsi6u4mRoyK6o",
+      "AppSecret": "p25euoSG8OSy4cPWg4pTWsmd9XLDXBp7FY0MBgJeJca0FBkly0"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
