Added registration using Twitter

--- a/Collectors/appsettings.json
+++ b/Collectors/appsettings.json
@@ -8,8 +8,8 @@
       "AppSecret": "d45ecac2afad36ebbafc4ca705b3f36e"
     },
     "Twitter": {
-      "AppId": "yxKtHcAmxgLARsi6u4mRoyK6o",
-      "AppSecret": "p25euoSG8OSy4cPWg4pTWsmd9XLDXBp7FY0MBgJeJca0FBkly0"
+      "ConsumerKey": "yxKtHcAmxgLARsi6u4mRoyK6o",
+      "ConsumerSecret": "p25euoSG8OSy4cPWg4pTWsmd9XLDXBp7FY0MBgJeJca0FBkly0"
     }
   },
   "Logging": {
